CSS overflow text fix

--- a/sass/_lb.scss
+++ b/sass/_lb.scss
@@ -1205,7 +1205,21 @@ li {
     table{
 	    font-size:80%;
 
-	    td{padding:4px}
+	    td{
+				padding:4px;
+				
+				&.views-field-additional-information{
+					//max-width:240px;
+					white-space: -moz-pre-wrap; /* Mozilla */
+					white-space: -hp-pre-wrap; /* HP printers */
+					white-space: -o-pre-wrap; /* Opera 7 */
+					white-space: -pre-wrap; /* Opera 4-6 */
+					white-space: pre-wrap; /* CSS 2.1 */
+					white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
+					word-wrap: break-word; /* IE */
+					word-break: break-all;
+				}
+			}
 
     }
   }
