--- a/stylesheets/jjamerson_lb_screen.css
+++ b/stylesheets/jjamerson_lb_screen.css
@@ -1551,6 +1551,25 @@ $s-width: 480px;
   body.no-sidebars.page-about-us-services-ill-submissions #page-content table td {
     padding: 4px;
   }
+  body.no-sidebars.page-about-us-services-reserve-order-submissions #page-content table td.views-field-additional-information,
+  body.no-sidebars.page-about-us-services-purchase-submissions #page-content table td.views-field-additional-information,
+  body.no-sidebars.page-about-us-services-ill-submissions #page-content table td.views-field-additional-information {
+    white-space: -moz-pre-wrap;
+    /* Mozilla */
+    white-space: -hp-pre-wrap;
+    /* HP printers */
+    white-space: -o-pre-wrap;
+    /* Opera 7 */
+    white-space: -pre-wrap;
+    /* Opera 4-6 */
+    white-space: pre-wrap;
+    /* CSS 2.1 */
+    white-space: pre-line;
+    /* CSS 3 (and 2.1 as well, actually) */
+    word-wrap: break-word;
+    /* IE */
+    word-break: break-all;
+  }
 
   body.front {
     /* front block width */
